<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="view"
            type="com.devnic.gmonitoring.ui.weeks.ViewModelAddWeeks" />
    </data>
    <ScrollView
        android:id="@+id/view_add_months"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context=".ui.weeks.AddWeeks">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="414dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/josefins"
                    android:text="@string/title_add_months"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/week" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefins"
                    android:text="@string/subtitle_add_week"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize"
                    app:layout_constraintBottom_toTopOf="@+id/calendarViewMonths" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefins"
                    android:text="@string/init_semana"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize" />

                <DatePicker
                    android:id="@+id/idinitweek"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefins"
                    android:text="@string/fin_semana"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize" />

                <DatePicker
                    android:id="@+id/idfinweek"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnguardarweek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacetop"
                    android:background="@drawable/round"
                    android:onClick="@{() -> view.weekvalid()}"
                    android:text="@string/btn_guardar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
    </ScrollView>
</layout>


