<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view"
            type="com.devnic.gmonitoring.ui.months.ViewModelAddMonths" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_add_months"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fitsSystemWindows="true"
        tools:context=".ui.months.AddMonths">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="414dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/josefins"
            android:text="@string/title_add_months"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/addmonths_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacetop"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/spacetop"
            android:fontFamily="@font/josefinsligth"
            android:hint="@string/hint_description_addmonths"
            android:text="@={view.description}"
            android:textSize="@dimen/textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefins"
            android:text="@string/subtitle_add_months"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize"
            app:layout_constraintBottom_toTopOf="@+id/calendarViewMonths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <CalendarView
            android:id="@+id/calendarViewMonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="124dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnguardarmonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="@drawable/round"
            android:onClick="@{()-> view.valid()}"
            android:text="@string/btn_guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
